tests/tooling/fixtures/native/recovery/negative/negative_global_assignment_unknown_target.objc3
// Expected diagnostic code(s): O3S214.
module NegativeGlobalAssignmentUnknownTarget;

let total = 5;

fn main() -> i32 {
  shadow += 1;
  return total;
}
